# punctuation-iwslt2011

./: README.md  iswslt2011_metric.py  iwslt2011.py  mgb.py  pyproject.toml  usage_examples.ipynb
.ipynb_checkpoints/: iwslt2011-checkpoint.py  usage_examples-checkpoint.ipynb
