[tool.poetry]
name = "punctuation-iwslt2011"
version = "0.1.0"
description = "Huggingface datasets script for pre-processing punctuation annotation using IWSLT11 dataset."
authors = ["Christoph Minixhofer <christoph.minixhofer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
datasets = "^1.3.0"
nltk = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
